--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <tbody class="board">
             <div class="modify">
                 <h1>Mine Sweeper</h1>
-                <div>timer: <span class="min">00</span>:<span class="sec">00</span></div>
+                <button class="smiley" onclick="restart()"> 😀 </button>
+                <div class="timer"><span class="min">00</span>:<span class="sec">00</span></div>
 
-                <button onclick="chooseDifficult(4, 2)">Eazy</button>
+                <button onclick="chooseDifficult(4, 2)">Easy</button>
                 <button onclick="chooseDifficult(8, 14)">Hard</button>
                 <button onclick="chooseDifficult(12, 32)">Extreme!</button>
 
