--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
 <body onload="onInit()" background="background-image.jpg">
 
-    <table align="center" border="1" cellpadding="5">
+    <table align="center" border="1">
         <tbody class="board">
             <div class="modify">
                 <h1>Mine Sweeper</h1>
                 <button class="smiley" onclick="restart()"> 😀 </button>
                 <div class="timer"><span class="min">00</span>:<span class="sec">00</span></div>
+                <button class="hint" onclick="giveHint(this)"> 💡 💡 💡</button>
+                <div class="lives">💖💖💖</div>
 
                 <button onclick="chooseDifficult(4, 2)">Easy</button>
                 <button onclick="chooseDifficult(8, 14)">Hard</button>
