--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="js/util.js"></script>
     <script src="js/mineSweeper.js"></script>
 </body>
+<footer> By Amir Sela</footer>
 
-<footer> by Amir Sela</footer>
 
 </html>
